--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -21,6 +21,24 @@
         app:layout_constraintWidth_percent="1.0"
         app:srcCompat="@drawable/quickbox_logo" />
 
+    <ImageView
+        android:id="@+id/no_connection"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="TODO"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.21"
+        app:layout_constraintWidth_percent="0.24"
+        app:srcCompat="@drawable/no_access"
+        tools:visibility="visible" />
+
     <Button
         android:id="@+id/signinB"
         android:layout_width="0dp"
@@ -165,22 +183,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         app:layout_constraintVertical_bias="0.298"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/no_connection"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/logo"
-        app:layout_constraintEnd_toEndOf="@+id/logo"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.081"
-        app:layout_constraintWidth_percent="0.2"
-        app:srcCompat="@drawable/no_access"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
