--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -5,6 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/no_connection"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="TODO"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.21"
+        app:layout_constraintWidth_percent="0.24"
+        app:srcCompat="@drawable/no_access"
+        tools:visibility="visible" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/mapS"
         android:layout_width="0dp"
@@ -109,7 +127,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/error"
         app:layout_constraintWidth_percent="0.8"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck"
+        />
 
     <EditText
         android:id="@+id/email"
@@ -190,23 +209,7 @@
         app:layout_constraintTop_toBottomOf="@+id/mapS"
         app:layout_constraintVertical_bias="0.63"
         app:layout_constraintWidth_percent="0.3"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/no_connection"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="32dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.96"
-        app:layout_constraintWidth_percent="0.2"
-        app:srcCompat="@drawable/no_access"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        android:progressTint="@color/color4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
