--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -125,15 +125,17 @@
         android:id="@+id/no_connection"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="TODO"
+        android:scaleType="fitCenter"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37"
-        app:layout_constraintWidth_percent="0.2"
+        app:layout_constraintVertical_bias="0.562"
+        app:layout_constraintWidth_percent="0.24"
         app:srcCompat="@drawable/no_access"
         tools:visibility="visible" />
 
