--- a/app/src/main/res/xml/network_sec.xml
+++ b/app/src/main/res/xml/network_sec.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config xmlns:tools="http://schemas.android.com/tools">
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">192.168.1.123</domain>
+        <domain includeSubdomains="true"></domain>
     </domain-config>
     <base-config cleartextTrafficPermitted="false">
         <trust-anchors>
